# juju-backup-all

./: .flake8  .gitignore  .pre-commit-config.yaml  Makefile  README.md  SECURITY.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: check.yaml  release.yaml  tics.yaml
jujubackupall/: __init__.py  async_handlers.py  backup.py  cli.py  config.py  constants.py  errors.py  fetch.py  globals.py  process.py  utils.py
snap/: snapcraft.yaml
tests/functional/: conftest.py  requirements.txt  test_backup.py
tests/unit/: requirements.txt  test_backup.py  test_cli.py  test_config.py  test_process.py  test_utils.py
