[metadata]
name = juju-backup-all
url = https://launchpad.net/juju-backup-all
author = Canonical
description = Automatic discovery backup tool for charms, controllers, and configs
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >=3.6.9
packages = find:
setup_requires =
    setuptools_scm
install_requires =
    attrs >= 21.2.0
    juju
test_requires =
    coverage[toml]
    pytest
    pytest-html
    pytest-asyncio
    pytest-timeout

[options.entry_points]
console_scripts =
    juju-backup-all = jujubackupall.cli:main
